--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <span>更新日: 2023年12月15日</span>
                         <span>カテゴリー: 3Dプリント</span>
                     </div>
-                    <img src="https://source.unsplash.com/random/800x400/?3dprinter,zipper" alt="3Dプリントされたジッパーのプロトタイプ" class="article-image">
+                    <img src="zipperResources/IMG_1937.HEIC" alt="3Dプリントされたジッパーのプロトタイプ" class="article-image">
                 </div>
                 
                 <div class="toc">
